--- a/Reynolds_Currie_2024_transit_supply_index_GTFS.tex
+++ b/Reynolds_Currie_2024_transit_supply_index_GTFS.tex
@@ -197,40 +197,49 @@ from \citet{currie2007identifying}.
 \hypertarget{the-suppy-index}{%
 \subsection{The Suppy Index}\label{the-suppy-index}}
 
-The Supply Index is shown in Equation \ref{eq:supply_index}, where
-\(SI_{Area}\) is the Supply Index for the area of interest,
-\(Area_{Bn}\) is the buffer area for each stop within the area of
-interest (in \citet{currie2007identifying} taken as 400 metres for bus
-and tram stops, and 800 metres for railway stations), \(Area_area\) is
-the area of the area of interest, and \(SL_{Bn}\) is the number of
-transit arrivals for each stop for a given time period (in
-\citet{currie2007identifying} taken as one week).
-
-\begin{equation}
+The Supply Index is shown in Equation \ref{eq:supply_index}. Minor
+adjustments have been made to generalise the equation, as
+\citet{currie2007identifying} focused on the context of Melbourne's
+Census Collection Districts (CCD) and calculations based on a week of
+transit service. \begin{equation}
 \label{eq:supply_index}
-  SI_{area} = \sum{\frac{Area{_Bn}}{Area_{area}}*SL_{Bn}}
+  SI_{area, time} = \sum{\frac{Area_{Bn}}{Area_{area}}*SL_{n, time}}
 \end{equation}
 
-The SI\textsubscript{area} metric describes the number of transit
-arrivals at stops within an area of interest, multiplied by a factor
-accounting for the proportion of the area of interest that is within
-typical walking distance of each stop. An advantage of the Supply Index
-is that it is a relatively simple number to calculate, understand and
-explain. It is also addative, in that SI\textsubscript{area} scores can
-be aggregated to calculate an overall score for a region encompassing
-multiple areas of interest.
+\(SI_{area, time}\) is the Supply Index for the area of interest and a
+given period of time. \(Area_{Bn}\) is the buffer area for each stop (n)
+within the area of interest. In \citet{currie2007identifying} this was
+based on a radius of 400 metres for bus and tram stops, and 800 metres
+for railway stations. \(Area_area\) is the area of the area of interest,
+and \(SL_{n,time}\) is the number of transit arrivals for each stop for
+a given time period.
 
-\citet{currie2007identifying} calculated the SI for various CCDs in
-Melbourne using a timetable database provided by the Victorian Public
-Transport Authority (PTA). This predated the widespread availability of
-GTFS data, which provides a standardised format for timetable data that
-is produced by many transit systems. GTFS is an open, text-based format
-that was developed originally to allow transit information to be
-included in the Google Maps navigation platform \citep{GTFS}. A
-question, therefore, is how to calculate the SI using GTFS data so that
-SI\textsubscript{areas} can be calculated and compared for any area of
-interest where transit service information is available in the GFTS
-format.
+An advantage of the Supply Index is that it is a relatively simple
+number to calculate, understand and explain. It describes the number of
+transit arrivals at stops within an area of interest and time frame,
+multiplied by a factor accounting for the proportion of the area of
+interest that is within typical walking distance of each stop. Hence,
+more services, more stops and higher frequencies would all result in an
+increase in Supply Index score. The Supply Index, however, does not
+incorporate further aspects, such as service span, off-peak share of
+service or service speed. However, including such metrics may increase
+the complexity of calculating and describing the index to non-transit
+specialists. Such simplicity is helped by the way that the Index is
+additive, in that SI\textasciitilde area, time\textasciitilde{} scores
+can be aggregated to calculate an overall score across multiple time
+periods or for a region encompassing multiple areas of interest.
+
+\citet{currie2007identifying} calculated the SI\textasciitilde area,
+time\textasciitilde{} for various CCDs in Melbourne using a timetable
+database provided by the Victorian Public Transport Authority (PTA).
+This predated the widespread availability of GTFS data, which provides a
+standardised format for timetable data that is produced by many transit
+systems. GTFS is an open, text-based format that was developed
+originally to allow transit information to be included in the Google
+Maps navigation platform \citep{GTFS}. A question, therefore, is how to
+calculate the SI using GTFS data so that SI\textsubscript{areas} can be
+calculated and compared for any area of interest where transit service
+information is available in the GFTS format.
 
 \hypertarget{methodology}{%
 \section{Methodology}\label{methodology}}
@@ -246,10 +255,41 @@ available at
 included in the Rmarkdown file used to typeset this paper).
 
 The gtfstools R package \citep{R-gtfstools} was used to split input GTFS
-feeds by mode to facilitate the buffer zone calculation. The extended
-GTFS mode definitions based on \citet{filter_GTFS_by_mode} were used
-with default buffer zones of 400 metres (bus and Light Rail Transit
-(LRT)) and 800 metres (rail, monorail, air etc.)
+feeds by mode to facilitate the buffer zone calculation. Buffer zones of
+400 metres for bus and Light Rail Transit (LRT) services and 800 metres
+for heavy rail, as per \citet{currie2007identifying}. There is an
+extended mode definition that includes modes beyond the 10 in the GTFS
+standard \citep{filter_GTFS_by_mode}, but these are not dealt with by
+the gtfstools package. Further research may seek to extend this such
+that other modes can be included, but for the purposes of this study the
+buffer zone was set at 400 metres for cable trams, aerial lifts such a
+gondalas and trolleybuses, and at 800 metres for ferries, funiculars and
+monorails.
+
+Where transit stops are located close to bounaries their catchment areas
+may fall into multiple areas of interest. The sp package from
+\citep[\citet{applied_spatial_data_analysis_with_R}]{spatial_data_in_R}
+provides tools for manipulating geographic data and shape files in R.
+This is used to calculate the proportion of each stop's catchment area
+that falls into each geographical area of interest. GTFS files define
+stop locations based on latitude and longitude
+\citep{GTFS_schedule_reference}, whereas the Area\textsubscript{Bn}
+calculation needs to be provided in the same units as the
+Area\textsubscript{area} variable. This therefore necessitates the use
+of a geographic transform so that calculations can be undertaken in
+metres.
+
+The SI\textsubscript{area} was calculated on a mode-by-mode and
+stop-by-stop basis, by first determining the amount of the catchment
+area (Area\textsubscript{Bn}) that falls into each geographical area of
+interest for the stop in question. This is combined with the area for
+each geographical area of interest (Area\textsubscript{area}) and the
+number of stop arrivals within the (SL\textsubscript{Bn}) to calculate
+the contribution to the index scores made by just that single stop for
+every area of interest (the SI\textasciitilde area, time, mode,
+n\textasciitilde); these are then added to a cumulative total field for
+each area of interest; and the calculations are repeated until all stops
+and modes in the GTFS file have been included.
 
 \hypertarget{results}{%
 \section{Results}\label{results}}
@@ -262,6 +302,10 @@ with default buffer zones of 400 metres (bus and Light Rail Transit
 
 \hypertarget{melbourne}{%
 \subsubsection{Melbourne}\label{melbourne}}
+
+The EPSG:28355 transform \citep{EPSG_28355} was used to shift longitude
+and latitude into metres as per the Geocentric Datum of Australia 1994
+(GDA95 / MGA zone 55) coordinates,
 
 Overall
 
